# sb-robot

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
esp32/TB6612FNG/: platformio.ini
esp32/TB6612FNG/src/: main.cpp
esp32/ToF/: NOTES.md  platformio.ini
esp32/ToF/include/: ToFSensor.h
esp32/ToF/src/: ToFSensor.cpp_  main.cpp  main.cpp_  main.cpp__
esp32/ToF/test/: CMakeLists.txt   main.cpp  ws_test.py
esp32/bno/: platformio.ini
esp32/bno/include/: BNO055Sensor.h
esp32/bno/src/: BNO055Sensor.cpp  main.cpp
esp32/camera_test/: custom_board.json  platformio.ini
esp32/camera_test/src/: main.cpp
esp32/sb-robot/: NOTES.md  README.MD  platformio.ini  sb-robot.code-workspace  tunings.md
esp32/sb-robot/extra_packages/tf2_msgs/: CMakeLists.txt  package.xml
esp32/sb-robot/include/: BNO055Sensor.h  BalanceController.h  MicroRos.h  ParameterRegistry.h  RobotServer.h  RobotServer.h_  ToFSensor.h  motorcontroller.h  utils.h
esp32/sb-robot/menu/: menu.emf  menu_main.cpp  menu_menu.cpp  menu_menu.h
esp32/sb-robot/menu/.backup/: menu.emf_20250214_18484433.bak  menu.emf_20250214_18490665.bak  menu.emf_20250214_18491589.bak  menu.emf_20250214_18492878.bak  menu.emf_20250214_18511793.bak  menu.emf_20250214_19433059.bak  menu.emf_20250214_20094711.bak  menu.emf_20250215_00095139.bak  menu.emf_20250215_08542495.bak  menu.emf_20250215_08565865.bak  menu.emf_20250215_09014204.bak  menu.emf_20250215_09045438.bak  (+61 more)
esp32/sb-robot/src/: BNO055Sensor.cpp  BalanceController.cpp  MicroRos.cpp  ParameterRegistry.cpp  RobotServer.cpp  RobotServer.cpp_  ToFSensor.cpp  main.cpp  main.cpp_  menu_main.cpp  menu_menu.cpp  menu_menu.cpp__  menu_menu.h  menu_menu.h_  menu_menu.h__  motorcontroller.cpp  tcMenuU8g2.cpp
esp32/sb-robot/test/: ws_test.py
microros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
microros_ws/log/: latest_build
microros_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
microros_ws/src/log/: latest_build
ros_ws/config/: pid_config
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/log/: latest_build
ros_ws/src/sb_robot/: CMakeLists.txt
ros_ws/src/ws_hw_interface/: CMakeLists.txt  ws_hw_interface.xml
ros_ws/src/ws_hw_interface/include/ws_hw_interface/: sb_system.hpp  wheel.hpp  ws_driver.hpp  ws_driver.hpp_
ros_ws/src/ws_hw_interface/src/: sb_system.cpp  ws_driver.cpp  ws_driver.cpp_
ros_ws/test/: CMakeLists.txt
ros_ws/test/include/: ws_driver.hpp_
ros_ws/test/src/: main.cpp__  ws_driver.cpp__
test/: platformio.ini
test/src/: main.cpp
(+325 files in other folders)
